k8s/full-minimal-example.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mezzium
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mezzium
  template:
    metadata:
      labels:
        app: mezzium
    spec:
      containers:
        - name: mezzium
          image: shuliakovsky/mezzium:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mezzium
spec:
  selector:
    app: mezzium
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mezzium
spec:
  rules:
    - host: mezzium.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mezzium
                port:
                  number: 80
